[Autofill Sync] Do not show downstream prompt on CVC fields

This CL fixes a small bug where the opt-in prompt for Autofill Sync
Transport is shown on CVC and CC type fields. This is necessary because
these fields don't actually have suggestions available, so we hit a
DCHECK when the user opts in and we try to show them suggestions.

Bug: 914944
Change-Id: I38061b59699de623d0d828d1932dbfd1ad7aceee
Reviewed-on: https://chromium-review.googlesource.com/c/1376813
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Tommy Martino <tmartino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616459}
Former-commit-id: 3b5fea2584edb0bb8b155bed9cc386aa3f6c66c6